Primer entrega final con la funcion agregar y quitar super reducidas gracias a nuevas funciones y un intento fallido de listar la lista de cursos.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </body>
 
 <body>
-    <script src="primerdesafio.js"></script>
+    <script src="primerEntregaFinal.js"></script>
 </body>
 
 </html>
