Primer entrega con DOM

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
 <body>
     <header class="header">
+        <div class="carrito">
+            <button onclick="verCarrito()">Ver Carrito</button>
+            <label for="carritoWeb">Carrito:</label><br>
+            <input type="number" name="carritoWeb" id="carritoWeb" disabled>
+        </div>
     </header>
     <main class="general_body">
 
@@ -31,7 +36,7 @@
         </div>
 
         <div class="workshops__list">
-            <div class="workshop" data-aos="zoom-out">
+            <!-- <div class="workshop" data-aos="zoom-out">
                 <h3>(1) Aspectos psicológicos en el crossfit I</h3>
                 <p>
                     (Taller para todos USD 50)
@@ -43,7 +48,7 @@
                 </ul>
 
                 <a href="">
-                    Próximamente
+                    Comprar
                 </a>
             </div>
             <div class="workshop" data-aos="zoom-out">
@@ -58,11 +63,11 @@
                 </ul>
 
                 <a href="">
-                    Próximamente
+                    Comprar
                 </a>
             </div>
             <div class="workshop" data-aos="zoom-out">
-                <h3>(3) Liderazgo en el crossfit</h3>
+                <h3>3- Liderazgo en el crossfit</h3>
                 <p>
                     (Taller para coaches USD 90)
                 </p>
@@ -73,11 +78,11 @@
                 </ul>
 
                 <a href="">
-                    Próximamente
+                    Comprar
                 </a>
             </div>
             <div class="workshop" data-aos="zoom-out">
-                <h3>(4) La comunicación en el box</h3>
+                <h3>4- La comunicación en el box</h3>
                 <p>
                     (Taller para coaches USD 90)
                 </p>
@@ -88,11 +93,11 @@
                 </ul>
 
                 <a href="">
-                    Próximamente
+                    Comprar
                 </a>
             </div>
             <div class="workshop" data-aos="zoom-out">
-                <h3>(5) PSICO-STRENGTH: Entrenamiento mental para atletas</h3>
+                <h3>5- PSICO-STRENGTH: Entrenamiento mental para atletas</h3>
                 <p>
                     (Taller para atletas de competición USD 90)
                 </p>
@@ -103,9 +108,9 @@
                 </ul>
 
                 <a href="">
-                    Próximamente
+                    Comprar
                 </a>
-            </div>
+            </div> -->
 
 
 
@@ -125,7 +130,7 @@
 </body>
 
 <body>
-    <script src="primerEntregaFinal.js"></script>
+    <script src="iniciosConDom.js"></script>
 </body>
 
 </html>
