--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header class="header">
         <div class="carrito">
-            <button onclick="verCarrito()">Ver Carrito</button>
+            <button id="verCarro" onclick="verCarrito()">Ver Carrito</button>
             <label for="carritoWeb">Carrito:</label><br>
             <input type="number" name="carritoWeb" id="carritoWeb" disabled>
         </div>
@@ -124,6 +124,7 @@
     <script>
         AOS.init();
     </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
         </script>
