--- a/index.html
+++ b/index.html
@@ -10,128 +10,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ACAP workshops ofrecen gran valor para la concientización del deportista">
+    <meta name="description" content="ACAP es una empresa dedicada a la concientización en el mundo deportivo.">
     <meta name="keywords"
         content="As Concious as possible crossfit training healthcare entrenamiento cuidado personal salud consciencia tan consciente como sea posible concientización mudo deporte deportivo">
-    <title>WORKSHOPS</title>
-    <link rel="stylesheet" href="..//css/style.css">
-
+    <title>ACAP</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header">
-        <div class="carrito">
-            <button id="verCarro" onclick="verCarrito()">Ver Carrito</button>
-            <label for="carritoWeb">Carrito:</label><br>
-            <input type="number" name="carritoWeb" id="carritoWeb" disabled>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark navbar__custom">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="./assets/logo/ACAP.png" class="logo"
+                        alt="Imagen-Header"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item"><a class="nav-link text-light" href="./index.html">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link text-light" href="./pages/app.html">APP</a></li>
+                        <li class="nav-item"><a class="nav-link text-light" href="./pages/workshops.html">WORKSHOPS</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link text-light" href="./pages/blog.html">BLOG</a></li>
+                        <li class="nav-item"><a class="nav-link text-light" href="./pages/contact.html">CONTACT</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
     </header>
+    <section class="main__cover" style="background-image: url('assets/img/ACAP\ -\ Frase.jpg');">
+
+    </section>
     <main class="general_body">
 
-        <div class="main__content" data-aos="zoom-in">
-            <h1>Workshops</h1>
+        <div class="main__content">
+            <img src="./assets/logo/ACAP-white.png" alt="">
+
+
+            <h1>Qué es ACAP?</h1>
+            <br>
             <p>
-                Todo lo necesario para contribuir al desarrollo de la consciencia del ser humano que practica deportes.
+                ACAP es una empresa dedicada a la concientización en el mundo deportivo.
+            </p>
+            <p> Se trabaja en equipo interdisciplinario para contribuir al desarrollo de la consciencia del ser humano
+                que practica deportes.
+            </p>
+            <p>
+                Consideramos que si el individuo trabaja para ampliar y expandir su conciencia, puede experimentar la
+                vida de manera más plena. Si su mente y cuerpo están completamente conectados, y son integrados con
+                consciencia, todas las metas que se proponga cobrarán sentido, y su potencial aumentará.
+            </p>
+            <p>
+                Además, este nivel de consciencia individual, traerá consigo la generación de un ambiente más funcional
+                (más consciente también), con mejores relaciones, y tratos, por parte de todos, en el lugar en donde se
+                desarrolle la actividad.
             </p>
         </div>
-
-        <div class="workshops__list">
-            <!-- <div class="workshop" data-aos="zoom-out">
-                <h3>(1) Aspectos psicológicos en el crossfit I</h3>
-                <p>
-                    (Taller para todos USD 50)
-                </p>
-                <ul>
-                    <li>1 encuentro</li>
-                    <li>4 horas</li>
-                    <li>Presencial</li>
-                </ul>
-
-                <a href="">
-                    Comprar
-                </a>
-            </div>
-            <div class="workshop" data-aos="zoom-out">
-                <h3>(2) Aspectos psicológicos en el crossfit II</h3>
-                <p>
-                    (Taller para todos USD 80)
-                </p>
-                <ul>
-                    <li>1 encuentro</li>
-                    <li>4 horas</li>
-                    <li>Presencial</li>
-                </ul>
-
-                <a href="">
-                    Comprar
-                </a>
-            </div>
-            <div class="workshop" data-aos="zoom-out">
-                <h3>3- Liderazgo en el crossfit</h3>
-                <p>
-                    (Taller para coaches USD 90)
-                </p>
-                <ul>
-                    <li>1 encuentro</li>
-                    <li>5 horas</li>
-                    <li>Presencial y online</li>
-                </ul>
-
-                <a href="">
-                    Comprar
-                </a>
-            </div>
-            <div class="workshop" data-aos="zoom-out">
-                <h3>4- La comunicación en el box</h3>
-                <p>
-                    (Taller para coaches USD 90)
-                </p>
-                <ul>
-                    <li>1 encuentro</li>
-                    <li>2 horas</li>
-                    <li>Presencial y online</li>
-                </ul>
-
-                <a href="">
-                    Comprar
-                </a>
-            </div>
-            <div class="workshop" data-aos="zoom-out">
-                <h3>5- PSICO-STRENGTH: Entrenamiento mental para atletas</h3>
-                <p>
-                    (Taller para atletas de competición USD 90)
-                </p>
-                <ul>
-                    <li>4 encuentros</li>
-                    <li>2 horas c/u</li>
-                    <li>Presencial</li>
-                </ul>
-
-                <a href="">
-                    Comprar
-                </a>
-            </div> -->
-
-
-
-        </div>
     </main>
-
-
     <footer class="footer">
-
+        <nav class="footerNav">
+            <ul>
+                <li class="header__menu"><a class="text-light" href="./index.html">HOME</a></li>
+                <li class="header__menu"><a class="text-light" href="./pages/app.html">APP</a></li>
+                <li class="header__menu"><a class="text-light" href="./pages/workshops.html">WORKSHOPS</a></li>
+                <li class="header__menu"><a class="text-light" href="./pages/blog.html">BLOG</a></li>
+                <li class="header__menu"><a class="text-light" href="./pages/contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
     </footer>
     <script>
         AOS.init();
     </script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
         </script>
-</body>
-
-<body>
-    <script src="iniciosConDom.js"></script>
 </body>
 
 </html>
