Aplicando carrito con local storage. Si se carga la pagina, se recupera el carrito guardado

--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -63,9 +63,9 @@
             </p>
         </div>
 
-        <div class="workshops__list">
+        <div class="workshops__list" id="workshops__list">
 
-
+            <!-- aca se insertan los cursos -->
 
         </div>
         <div class="modal-container" id="modal__container">
