Agregado el uso de fetch y agregado, y funcionando, el boton finalizar compra

--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -73,7 +73,11 @@
                 <h2>Carrito</h2>
                 <div class="modal__body" id="modal__body">
                 </div>
-                <button id="closeCarrito">Cerrar</button>
+                <div class="modal__body">
+                    <button id="finCompra">Finalizar Compra</button>
+                    <button id="closeCarrito">Cerrar</button>
+                </div>
+
             </div>
         </div>
     </main>
