--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -68,19 +68,140 @@
             <!-- aca se insertan los cursos -->
 
         </div>
+
+    </main>
+    <section>
         <div class="modal-container" id="modal__container">
             <div class="modal">
                 <h2>Carrito</h2>
                 <div class="modal__body" id="modal__body">
                 </div>
                 <div class="modal__body">
-                    <button id="finCompra">Finalizar Compra</button>
+                    <button id="btnMetodoPago">Pasar al Método de pago</button>
+                    <!-- <button id="finCompra">Finalizar Compra</button> -->
                     <button id="closeCarrito">Cerrar</button>
                 </div>
 
             </div>
         </div>
-    </main>
+        <div class="modal-container" id="modal__payment">
+            <div class="modal">
+                <h2>Metodo de Pago</h2>
+                <div class="modal__body contenedor-tarjeta" id="modal__payment__body">
+                    <!-- Tarjeta -->
+                    <section id="tarjeta" class="tarjeta">
+                        <div class="delantera">
+                            <div class="logo-marca" id="logo-marca">
+                                <!-- <img class="img-card" src="../assets/img/card/logos/visa.png" alt=""> -->
+                            </div>
+                            <img src="../assets/img/card/chip-tarjeta.png" alt="" class="chip">
+                            <div class="datos">
+                                <div class="grupo" id="numero">
+                                    <p class="label">Número Tarjeta</p>
+                                    <p class="numero">#### #### #### ####</p>
+                                </div>
+                                <div class="flexbox">
+                                    <div class="grupo" id="nombre">
+                                        <p class="label">Nombre Tarjeta</p>
+                                        <p class="nombre">Juan Perez</p>
+                                    </div>
+
+                                    <div class="grupo" id="expirationDate">
+                                        <p class="label">Expiración</p>
+                                        <p class="expirationDate"><span class="mes">MM</span>
+                                            / <span class="year">AA</span></p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="trasera">
+                            <div class="barra-magnetica"></div>
+                            <div class="datos">
+                                <div class="grupo" id="firma">
+                                    <p class="label">Firma</p>
+                                    <div class="firma">
+                                        <p></p>
+                                    </div>
+                                </div>
+                                <div class="grupo" id="ccv">
+                                    <p class="label">CCV</p>
+                                    <p class="ccv"></p>
+                                </div>
+
+                            </div>
+                            <p class="leyenda">
+                                Este modelo de tarjeta y su contenido son sólo para uso de un proyecto final de un curso
+                                de JavaScript
+                            </p>
+                            <a href="#" class="bank-link">www.yourbankfortest.com</a>
+                        </div>
+                    </section>
+                    <!-- Contenedor Boton Abrir formulario -->
+
+                    <div class="contenedor-btn">
+                        <button class="btn-abrir-formulario" id="btn-abrir-formulario">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                class="bi bi-plus-lg" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <!-- Formulario -->
+                    <form action="" id="formulario-tarjeta" class="formulario-tarjeta">
+                        <div class="grupo">
+                            <label for="inputNumero">Número Tarjeta</label>
+                            <input type="text" id="inputNumero" maxlength="19" autocomplete="off" required>
+                        </div>
+                        <div class="grupo">
+                            <label for="inputNombre">Nombre</label>
+                            <input type="text" id="inputNombre" maxlength="19" autocomplete="off" required>
+                        </div>
+                        <div class="flexbox">
+                            <div class="grupo expira">
+                                <label for="selectMes">Expiracion</label>
+                                <div class="flexbox">
+                                    <div class="grupo-select">
+                                        <select name="mes" id="selectMes">
+                                            <option disabled selected>Mes</option>
+                                        </select>
+                                        <i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd"
+                                                    d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                                            </svg></i>
+                                    </div>
+                                    <div class="grupo-select">
+                                        <select name="year" id="selectYear">
+                                            <option disabled selected>Año</option>
+                                        </select>
+                                        <i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd"
+                                                    d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
+                                            </svg></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="grupo ccv">
+                                <label for="inputCCV">CCV</label>
+                                <input type="text" id="inputCCV" maxlength="3" required>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn-enviar" id="finCompra">Enviar</button>
+                    </form>
+                </div>
+                <!-- <div class="modal__body"> -->
+                <!-- <button id="finCompra">Finalizar Compra</button> -->
+                <!-- <button id="closeCarrito">Cerrar</button> -->
+                <!-- </div> -->
+
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <nav class="footerNav">
             <ul>
@@ -95,12 +216,13 @@
     <script>
         AOS.init();
     </script>
+    <script src="../js/animacionCarrito.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
         </script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../js/animacionCarrito.js"></script>
 </body>
 
 </html>
